tests/NormalTests/paczka1/fuzzy1/81171514.err
Error in line 7: n8CGb458 S772 84,8
Error in line 6: 25Dpn S772 52,1
Error in line 8: n8CGb458 A400 71,7
Error in line 10: 25Dpn S877 35,2
Error in line 26: ghnuHcQI S611 99,9
Error in line 33: n8CGb458 A400 11,4
Error in line 31: A400 S877 18,6
